# Wine

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
src/: data.py  model.py
test/: test_data.py
