[tool.poetry]
name = "wine-quality-mlflow-dvc"
version = "0.1.0"
description = "MLflow + DVC demo on Wine Quality"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
scikit-learn = "^1.5"
mlflow = "^2.17"
click = "^8.1"
pyyaml = "^6.0"
dvc = "^3.55"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.8"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"